6614036: REGRESSION: Java server x86 VM intermittently crash with SIGSEGV (0xb)

Restore destination address in x86 32-bit checkcast_arraycopy stub

Reviewed-by: jrose, kvn, never